switched the roles of itemdropPage and BattlePartyPage

--- a/Crawl/Crawl/Views/Battle/CharacterItemsPage.xaml
+++ b/Crawl/Crawl/Views/Battle/CharacterItemsPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Crawl.Views.Battle.CharacterItemsPage">
+             x:Class="Crawl.Views.Battle.CharacterItemsPage"
+             x:Name="CharacterItemManagementPage">
     <ContentPage.Content>
         <StackLayout>
 
@@ -9,75 +10,7 @@
             <Label Text="Character Item Page"
                    HorizontalOptions="CenterAndExpand" />
 
-            <!-- Name -->
-            <Label Text="{Binding Data.Name}" 
-                   FontSize="Small" 
-                   HorizontalOptions="Center"/>
-
-            <!-- Head Item Picker -->
-            <Picker Title="Head"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListHead}"
-                    >
-            </Picker>
-
-
-            <!-- Necklass Item Picker -->
-            <Picker Title="Necklass"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListNecklass}"
-                    >
-            </Picker>
-
-            <!-- Hand Item picker -->
-            <Picker Title="Hand"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListHand}"
-                    >
-            </Picker>
-
-            <!-- OffHand Item Picker -->
-            <Picker Title="OffHand"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListOffHand}"
-                    >
-            </Picker>
-
-            <!-- Finger Item Picker -->
-            <Picker Title="Finger"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListFinger}"
-                    >
-            </Picker>
-
-            <!-- RightFinger Item Picker -->
-            <Picker Title="RightFinger"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListRightFinger}"
-                    >
-            </Picker>
-
-            <!-- LeftFinger Item Picker -->
-            <Picker Title="LeftFinger"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListLeftFinger}"
-                    >
-            </Picker>
-
-            <!-- Feet Item Picker -->
-            <Picker Title="Feet"
-                    VerticalOptions="CenterAndExpand"
-                    Margin="30, 5"
-					ItemsSource="{Binding ItemListFeet}"
-                    >
-            </Picker>
+            <Label Text="test" />
 
             <!-- Back Button -->
             <Button Clicked="Back_Clicked" Text="Back"/>
