Fixed the order of display for monster and party pages

--- a/Crawl/Crawl/Views/Battle/ItemDropPage.xaml
+++ b/Crawl/Crawl/Views/Battle/ItemDropPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="Crawl.Views.Battle.ItemDropPage"
-             Title="{Binding Title}"
+             Title="ItemDropPage"
              x:Name="ItemReorderPage">
 
     <ContentPage.ToolbarItems>
@@ -11,6 +11,8 @@
 
     <ContentPage.Content>
         <StackLayout>
+
+
             <ListView x:Name="ItemsListView"
                  ItemsSource="{Binding Dataset}"
                  VerticalOptions="FillAndExpand"
@@ -67,7 +69,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Clicked="OnCloseClicked" Text="Close"/>
+            <Button Clicked="OnCloseClicked" Text="Back"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
